--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -1413,6 +1413,85 @@
         "description": "ऑनलाइन IP पता खोज टूल। IP पते की भौगोलिक स्थिति, ISP जानकारी, समय क्षेत्र और अन्य विस्तृत जानकारी प्राप्त करें।",
         "keywords": "IP खोज,IP पता,भौगोलिक स्थिति,नेटवर्क जानकारी,ISP क्वेरी,ऑनलाइन टूल"
       }
+    },
+    "base64-file-converter": {
+      "name": "Base64 इमेज कनवर्टर",
+      "description": "इमेज को Base64 एन्कोडिंग में कनवर्ट करें और इसके विपरीत",
+      "image_description": "पेशेवर इमेज Base64 एन्कोडिंग कनवर्शन टूल, JPG, PNG, GIF, WebP आदि आम इमेज फॉर्मेट का समर्थन",
+      "image_to_base64": "इमेज से Base64",
+      "base64_to_image": "Base64 से इमेज",
+      "upload_image": "इमेज अपलोड करें",
+      "drag_image": "इमेज को यहाँ खींचें और छोड़ें या चुनने के लिए क्लिक करें",
+      "supported_formats": "JPG, PNG, GIF, WebP, SVG, BMP फॉर्मेट का समर्थन, अधिकतम 5MB",
+      "image_info": "इमेज जानकारी",
+      "image_name": "इमेज का नाम",
+      "image_size": "इमेज का आकार",
+      "image_type": "इमेज का प्रकार",
+      "download_image": "इमेज डाउनलोड करें",
+      "convert_to_image": "इमेज में कनवर्ट करें",
+      "convert_to_see_image": "इमेज देखने के लिए कनवर्ट बटन पर क्लिक करें",
+      "copy_base64": "Base64 कॉपी करें",
+      "base64_input": "Base64 इनपुट",
+      "base64_output": "Base64 आउटपुट",
+      "base64_input_placeholder": "Base64 एन्कोडेड सामग्री यहाँ पेस्ट करें...",
+      "base64_output_placeholder": "Base64 एन्कोडेड परिणाम यहाँ दिखेगा...",
+      "input_title": "इनपुट क्षेत्र",
+      "output_title": "आउटपुट परिणाम",
+      "output_desc": "कनवर्ट किया गया परिणाम",
+      "image_preview": "इमेज पूर्वावलोकन",
+      "no_image_selected": "कोई इमेज चयनित नहीं",
+      "invalid_base64": "अमान्य Base64 फॉर्मेट",
+      "image_too_large": "इमेज बहुत बड़ी है, 10MB से कम की सिफारिश",
+      "invalid_image_format": "असमर्थित इमेज फॉर्मेट, कृपया JPG, PNG, GIF, WebP, SVG या BMP फॉर्मेट चुनें",
+      "convert_success": "कनवर्शन सफल",
+      "mode_switch": "कनवर्शन मोड",
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "इमेज से Base64",
+      "tip1_desc": "किसी भी इमेज को चुनें और इसे स्वचालित रूप से Base64 एन्कोडिंग में कनवर्ट करें, वेब एम्बेडिंग और डेटा ट्रांसमिशन के लिए उपयुक्त।",
+      "tip2_title": "Base64 से इमेज",
+      "tip2_desc": "Base64 एन्कोडेड सामग्री पेस्ट करें और मूल इमेज को देखें या डाउनलोड करें।",
+      "tip3_title": "इमेज साइज़ सीमा",
+      "tip3_desc": "कनवर्शन प्रदर्शन सुनिश्चित करने के लिए, अपलोड की गई इमेज का 10MB से कम होना अनुशंसित है।",
+      "tip4_title": "सुरक्षा और गोपनीयता",
+      "tip4_desc": "सभी कनवर्शन ऑपरेशन ब्राउज़र में स्थानीय रूप से पूर्ण होते हैं। इमेज सर्वर पर अपलोड नहीं होती, डेटा सुरक्षा सुनिश्चित करते हुए।",
+      "introduction": "Base64 इमेज कनवर्टर एक पेशेवर इमेज एन्कोडिंग कनवर्शन टूल है जो इमेज और Base64 एन्कोडिंग के बीच द्विदिशीय कनवर्शन का समर्थन करता है। वेब डेवलपमेंट, CSS डेटा URLs, API इंटरफेस और इमेज एम्बेडिंग परिस्थितियों में व्यापक रूप से उपयोग किया जाता है। इमेज सुरक्षा और गोपनीयता सुरक्षा सुनिश्चित करने के लिए ब्राउज़र-आधारित स्थानीय प्रसंस्करण का उपयोग करते हुए, यह डेवलपर्स और डिज़ाइनरों के लिए एक आवश्यक उपकरण है।",
+      "features": [
+        "🔄 इमेज और Base64 के बीच द्विदिशीय कनवर्शन का समर्थन",
+        "🖼️ सभी इमेज फॉर्मेट का समर्थन (JPG, PNG, GIF, WebP, SVG, आदि)",
+        "🎯 तत्काल परिणामों के साथ वास्तविक समय कनवर्शन",
+        "🔒 स्थानीय प्रसंस्करण इमेज गोपनीयता और सुरक्षा सुनिश्चित करता है",
+        "📱 मोबाइल समर्थन के साथ रिस्पॉन्सिव डिज़ाइन",
+        "💾 कनवर्ट की गई इमेज का वन-क्लिक डाउनलोड",
+        "📋 सुविधाजनक Base64 कोड कॉपी कार्यक्षमता",
+        "🚀 बड़ी इमेज समर्थन के साथ उच्च-प्रदर्शन प्रसंस्करण"
+      ],
+      "faq": [
+        {
+          "question": "Base64 इमेज कनवर्टर कौन से इमेज फॉर्मेट का समर्थन करता है？",
+          "answer": "टूल सभी आम इमेज फॉर्मेट के कनवर्शन का समर्थन करता है, जिसमें JPEG, JPG, PNG, GIF, WebP, SVG, BMP और अधिक शामिल हैं। फॉर्मेट की परवाह किए बिना, इमेज को सटीक रूप से Base64 एन्कोडिंग में कनवर्ट किया जा सकता है और उनके मूल रूप में पूर्ण रूप से पुनर्स्थापित किया जा सकता है। टूल स्वचालित रूप से इमेज प्रकारों का पता लगाता है और कनवर्शन प्रक्रिया को अनुकूलित करता है।"
+        },
+        {
+          "question": "इमेज साइज़ की सीमाएं क्या हैं? प्रतिबंध क्यों हैं？",
+          "answer": "इष्टतम कनवर्शन प्रदर्शन और उपयोगकर्ता अनुभव के लिए, हम 10MB से कम इमेज की अनुशंसा करते हैं। यह सीमा निम्नलिखित को ध्यान में रखती है: 1) ब्राउज़र मेमोरी उपयोग दक्षता; 2) कनवर्शन गति और प्रतिक्रियाशीलता; 3) पेज फ्रीज़िंग से बचना। बड़ी इमेज के लिए, चंक प्रोसेसिंग या पेशेवर बैच प्रोसेसिंग टूल का उपयोग करने पर विचार करें।"
+        },
+        {
+          "question": "Base64 एन्कोडिंग के बाद इमेज कितनी बड़ी हो जाती हैं？",
+          "answer": "Base64 एन्कोडिंग इमेज का आकार लगभग 33% बढ़ा देती है। ऐसा इसलिए है क्योंकि Base64 256 संभावित बाइट मानों को दर्शाने के लिए 64 मुद्रित योग्य वर्णों का उपयोग करता है, जिसमें हर 3 मूल बाइट्स को 4 Base64 वर्णों के रूप में एन्कोड किया जाता है। जबकि आकार बढ़ता है, यह टेक्स्ट प्रोटोकॉल में बाइनरी डेटा के ट्रांसमिशन को सक्षम बनाता है, जो वेब डेवलपमेंट और API इंटरफेस में बहुत उपयोगी है।"
+        },
+        {
+          "question": "क्या कनवर्शन प्रक्रिया सुरक्षित है? क्या इमेज सर्वर पर अपलोड होती हैं？",
+          "answer": "पूर्णतः सुरक्षित! सभी कनवर्शन ऑपरेशन आपके ब्राउज़र में स्थानीय रूप से किए जाते हैं, और इमेज सामग्री कभी भी आपके डिवाइस को नहीं छोड़ती। हम किसी भी इमेज डेटा को अपलोड, स्टोर या रिकॉर्ड नहीं करते। यह स्थानीय प्रसंस्करण दृष्टिकोण उच्चतम स्तर की गोपनीयता सुरक्षा सुनिश्चित करता है, संवेदनशील दस्तावेज़ों और व्यक्तिगत इमेज को संभालने के लिए उपयुक्त है।"
+        },
+        {
+          "question": "मैं कैसे सत्यापित कर सकता हूं कि कनवर्शन के बाद Base64 एन्कोडिंग सही है?",
+          "answer": "आप निम्नलिखित तरीकों से सत्यापित कर सकते हैं: 1) रिवर्स सत्यापन के लिए हमारे Base64 से इमेज फ़ंक्शन का उपयोग करें; 2) जांचें कि Base64 स्ट्रिंग में केवल A-Z, a-z, 0-9, +, /, = वर्ण हैं; 3) सत्यापित करें कि स्ट्रिंग की लंबाई 4 का गुणज है; 4) इमेज के लिए, आप ब्राउज़र में Base64 को Data URL के रूप में पूर्वावलोकन कर सकते हैं।"
+        }
+      ],
+      "meta": {
+        "title": "Base64 इमेज कनवर्टर",
+        "description": "ऑनलाइन Base64 इमेज कनवर्शन टूल। वेब डेवलपमेंट और डेटा एम्बेडिंग के लिए इमेज और Base64 एन्कोडिंग के बीच द्विदिशीय कनवर्शन का समर्थन करता है।",
+        "keywords": "Base64 कनवर्शन,इमेज एन्कोडिंग,एन्कोडिंग टूल,डिकोडिंग टूल,इमेज कनवर्टर,ऑनलाइन टूल"
+      }
     }
   },
   "seo": {
