--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -74,6 +74,8 @@
     "crypto_desc": "एन्क्रिप्शन, डिक्रिप्शन और हैश उपकरण",
     "network": "नेटवर्क उपकरण",
     "network_desc": "नेटवर्क डिबगिंग और परीक्षण उपकरण",
+    "time": "समय उपकरण",
+    "time_desc": "समय रूपांतरण, समयांतर गणना और आयु सहायक",
     "image": "छवि उपकरण",
     "image_desc": "छवि प्रोसेसिंग और रूपांतरण उपकरण"
   },
@@ -1412,6 +1414,56 @@
         "title": "IP पता खोज टूल",
         "description": "ऑनलाइन IP पता खोज टूल। IP पते की भौगोलिक स्थिति, ISP जानकारी, समय क्षेत्र और अन्य विस्तृत जानकारी प्राप्त करें।",
         "keywords": "IP खोज,IP पता,भौगोलिक स्थिति,नेटवर्क जानकारी,ISP क्वेरी,ऑनलाइन टूल"
+      }
+    },
+    "time-converter": {
+      "name": "मिलीसेकंड टाइम कन्वर्टर",
+      "description": "मिलीसेकंड टाइमस्टैम्प और yyyy-MM-dd HH:mm:ss स्ट्रिंग के बीच रूपांतरण करें।",
+      "from_milliseconds_title": "मिलीसेकंड → दिनांक स्ट्रिंग",
+      "from_milliseconds_description": "मिलीसेकंड मान दर्ज करें और स्वरूपित स्थानीय समय तुरंत देखें।",
+      "milliseconds_input_label": "मिलीसेकंड",
+      "milliseconds_placeholder": "उदाहरण: 1735689600000",
+      "milliseconds_hint": "धनात्मक और ऋणात्मक पूर्णांक समर्थित, स्थानीय समय क्षेत्र का उपयोग किया जाएगा।",
+      "use_current_milliseconds": "वर्तमान मिलीसेकंड उपयोग करें",
+      "invalid_milliseconds": "कृपया मान्य मिलीसेकंड संख्या दर्ज करें।",
+      "formatted_time_label": "स्वरूपित समय (yyyy-MM-dd HH:mm:ss)",
+      "from_string_title": "दिनांक स्ट्रिंग → मिलीसेकंड",
+      "from_string_description": "yyyy-MM-dd HH:mm:ss प्रारूप में स्ट्रिंग दें और इसे मिलीसेकंड में बदलें।",
+      "string_input_label": "दिनांक स्ट्रिंग",
+      "string_hint": "24-घंटे प्रारूप का उपयोग करें, जैसे 2025-01-01 08:30:45।",
+      "use_current_string": "वर्तमान समय स्ट्रिंग उपयोग करें",
+      "invalid_string": "स्ट्रिंग को yyyy-MM-dd HH:mm:ss प्रारूप में होना चाहिए और वास्तविक समय को दर्शाना चाहिए।",
+      "milliseconds_output_label": "मिलीसेकंड मान",
+      "normalized_label": "मानकीकृत",
+      "quick_reference_title": "त्वरित संदर्भ",
+      "quick_reference_description": "लॉगिंग या स्क्रिप्ट के लिए वर्तमान समय को दोनों प्रारूपों में तुरंत कॉपी करें।",
+      "current_time_label": "वर्तमान समय स्ट्रिंग",
+      "current_milliseconds_label": "वर्तमान मिलीसेकंड",
+      "copy_current_string": "वर्तमान स्ट्रिंग कॉपी करें",
+      "copy_current_milliseconds": "वर्तमान मिलीसेकंड कॉपी करें",
+      "fill_with_latest": "नवीनतम मान भरें",
+      "introduction": "मिलीसेकंड टाइम कन्वर्टर डेवलपर्स को कच्चे टाइमस्टैम्प और पठनीय समय स्ट्रिंग के बीच तेज़ी से जाने में मदद करता है। यह एकसमान प्रारूप बनाए रखता है और लॉग, स्क्रिप्ट तथा API पेलोड के लिए विश्वसनीय रूपांतरण प्रदान करता है।",
+      "features": [
+        "🔁 मिलीसेकंड से yyyy-MM-dd HH:mm:ss स्ट्रिंग और विपरीत दिशा में त्वरित रूपांतरण।",
+        "🕒 इनपुट मान्यता तुरंत बताती है कि मान सही है या नहीं।",
+        "⚡ वर्तमान क्षण को एक क्लिक में भरें या कॉपी करें, दक्षता बढ़ाएँ।",
+        "🧭 ऋणात्मक टाइमस्टैम्प का समर्थन, 1970 से पहले की तिथियाँ भी देखें।",
+        "🌍 ब्राउज़र के स्थानीय समय क्षेत्र के साथ पूर्ण समकालिकता।"
+      ],
+      "faq": [
+        {
+          "question": "यह कन्वर्टर कौन-सा समय क्षेत्र उपयोग करता है?",
+          "answer": "रूपांतरण आपके ब्राउज़र के स्थानीय समय क्षेत्र में होता है। स्ट्रिंग स्थानीय समय दिखाती है और मिलीसेकंड JavaScript Date ऑब्जेक्ट के समान होता है।"
+        },
+        {
+          "question": "क्या मैं स्ट्रिंग में मिलीसेकंड भी जोड़ सकता हूँ?",
+          "answer": "वर्तमान संस्करण केवल सेकंड सटीकता के साथ काम करता है। यदि आपको मिलीसेकंड चाहिए तो सीधे मिलीसेकंड इनपुट का उपयोग करें—स्ट्रिंग आउटपुट सेकंड स्तर पर रहेगा।"
+        }
+      ],
+      "meta": {
+        "title": "मिलीसेकंड टाइम कन्वर्टर - टाइमस्टैम्प से yyyy-MM-dd HH:mm:ss",
+        "description": "नि:शुल्क ऑनलाइन टूल जो मिलीसेकंड टाइमस्टैम्प को yyyy-MM-dd HH:mm:ss स्ट्रिंग में और वापस बदलता है, साथ ही त्वरित वैधता जांच प्रदान करता है।",
+        "keywords": "मिलीसेकंड टाइमस्टैम्प,समय रूपांतरण,yyyy-MM-dd HH:mm:ss,टाइम कन्वर्टर,ऑनलाइन समय उपकरण"
       }
     },
     "base64-file-converter": {
