--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -74,6 +74,8 @@
     "crypto_desc": "加密解密和哈希工具",
     "network": "网络工具",
     "network_desc": "网络调试和测试工具",
+    "time": "时间工具",
+    "time_desc": "时间转换、时间差计算与年龄助手",
     "image": "图片工具",
     "image_desc": "图片处理和转换工具"
   },
@@ -1412,6 +1414,56 @@
         "title": "IP地址查询工具",
         "description": "在线IP地址查询工具。获取IP地址的地理位置、ISP信息、时区等详细信息。",
         "keywords": "IP查询,IP地址,地理位置,网络信息,ISP查询,在线工具"
+      }
+    },
+    "time-converter": {
+      "name": "毫秒时间转换器",
+      "description": "在毫秒时间戳与 yyyy-MM-dd HH:mm:ss 字符串之间转换。",
+      "from_milliseconds_title": "毫秒 → 日期字符串",
+      "from_milliseconds_description": "输入毫秒值即可查看格式化的本地时间字符串。",
+      "milliseconds_input_label": "毫秒值",
+      "milliseconds_placeholder": "示例：1735689600000",
+      "milliseconds_hint": "支持正负整数，按照本地时区解析。",
+      "use_current_milliseconds": "使用当前毫秒值",
+      "invalid_milliseconds": "请输入有效的毫秒数。",
+      "formatted_time_label": "格式化时间（yyyy-MM-dd HH:mm:ss）",
+      "from_string_title": "日期字符串 → 毫秒",
+      "from_string_description": "按照 yyyy-MM-dd HH:mm:ss 格式输入字符串，转换回毫秒时间戳。",
+      "string_input_label": "日期字符串",
+      "string_hint": "使用 24 小时制，例如 2025-01-01 08:30:45。",
+      "use_current_string": "填入当前时间字符串",
+      "invalid_string": "日期字符串必须符合 yyyy-MM-dd HH:mm:ss 格式并且为真实时间。",
+      "milliseconds_output_label": "毫秒结果",
+      "normalized_label": "标准化",
+      "quick_reference_title": "快捷参考",
+      "quick_reference_description": "快速获取当前时间的字符串与毫秒值，方便日志或脚本使用。",
+      "current_time_label": "当前时间字符串",
+      "current_milliseconds_label": "当前毫秒值",
+      "copy_current_string": "复制时间字符串",
+      "copy_current_milliseconds": "复制毫秒值",
+      "fill_with_latest": "填充最新时间",
+      "introduction": "毫秒时间转换器帮助开发者在原始时间戳与可读日期之间迅速切换，保持统一格式，适用于日志排查、接口调试和自动化脚本。",
+      "features": [
+        "🔁 毫秒值与 yyyy-MM-dd HH:mm:ss 字符串双向转换。",
+        "🕒 输入即时验证，避免格式错误导致的解析失败。",
+        "⚡ 一键填充与复制当前时间，提升日常效率。",
+        "🧭 支持负毫秒值，可用于查看 1970 年之前的日期。",
+        "🌍 与浏览器本地时区保持一致，所见即所得。"
+      ],
+      "faq": [
+        {
+          "question": "转换使用的时区是什么？",
+          "answer": "所有转换都基于浏览器所在的本地时区。字符串展示的是本地时间，毫秒值则与 JavaScript Date 对象一致。"
+        },
+        {
+          "question": "日期字符串可以包含毫秒部分吗？",
+          "answer": "当前版本仅支持秒级格式。如果需要毫秒精度，可以直接在毫秒输入框中处理，字符串会以秒精度展示。"
+        }
+      ],
+      "meta": {
+        "title": "毫秒时间转换器 - 时间戳与 yyyy-MM-dd HH:mm:ss 互转",
+        "description": "免费的在线工具，快速将毫秒时间戳转换为 yyyy-MM-dd HH:mm:ss 字符串，并支持反向转换与验证。",
+        "keywords": "毫秒时间戳,时间转换,yyyy-MM-dd HH:mm:ss,时间工具,在线转换"
       }
     },
     "base64-file-converter": {
