--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -77,7 +77,9 @@
     "time": "समय उपकरण",
     "time_desc": "समय रूपांतरण, समयांतर गणना और आयु सहायक",
     "image": "छवि उपकरण",
-    "image_desc": "छवि प्रोसेसिंग और रूपांतरण उपकरण"
+    "image_desc": "छवि प्रोसेसिंग और रूपांतरण उपकरण",
+    "developer": "डेवलपर उपकरण",
+    "developer_desc": "क्रॉन और ऑटोमेशन के लिए सहायक उपयोगिताएँ"
   },
   "changelog": {
     "title": "चेंजलॉग",
@@ -1464,6 +1466,68 @@
         "title": "मिलीसेकंड टाइम कन्वर्टर - टाइमस्टैम्प से yyyy-MM-dd HH:mm:ss",
         "description": "नि:शुल्क ऑनलाइन टूल जो मिलीसेकंड टाइमस्टैम्प को yyyy-MM-dd HH:mm:ss स्ट्रिंग में और वापस बदलता है, साथ ही त्वरित वैधता जांच प्रदान करता है।",
         "keywords": "मिलीसेकंड टाइमस्टैम्प,समय रूपांतरण,yyyy-MM-dd HH:mm:ss,टाइम कन्वर्टर,ऑनलाइन समय उपकरण"
+      }
+    },
+    "cron-expression-parser": {
+      "name": "Cron अभिव्यक्ति विश्लेषक",
+      "description": "Cron सिंटैक्स को जाँचें और अगली रनिंग समय देखें।",
+      "input_title": "Cron अभिव्यक्ति",
+      "input_description": "मानक 5-फ़ील्ड Cron अभिव्यक्ति दर्ज करें और प्रत्येक फ़ील्ड तथा भविष्य के निष्पादन समय का विश्लेषण करें।",
+      "expression_label": "अभिव्यक्ति",
+      "expression_hint": "यह प्रारूप मिनट घंटा दिन-का-वर्ष महीना सप्ताह-का-दिन का समर्थन करता है। JAN, MON जैसे नाम उपयोग किए जा सकते हैं।",
+      "presets": {
+        "workday_morning": "कार्यदिवस सुबह 9 बजे",
+        "every_fifteen_minutes": "हर 15 मिनट"
+      },
+      "preview_count_label": "पूर्वावलोकन संख्या (1-20)",
+      "current_time_label": "संदर्भ समय",
+      "structure_title": "फ़ील्ड विवरण",
+      "structure_description": "प्रत्येक फ़ील्ड के वास्तविक मान देखें।",
+      "table": {
+        "field": "फ़ील्ड",
+        "raw": "मूल",
+        "values": "मान"
+      },
+      "fields": {
+        "minute": "मिनट",
+        "hour": "घंटा",
+        "day_of_month": "महीने का दिन",
+        "month": "महीना",
+        "day_of_week": "सप्ताह का दिन",
+        "any": "कोई भी"
+      },
+      "errors": {
+        "empty": "कृपया Cron अभिव्यक्ति दर्ज करें।",
+        "invalid_field_count": "Cron अभिव्यक्ति में ठीक पाँच भाग होने चाहिए (मिनट घंटा दिन-का-वर्ष महीना सप्ताह-का-दिन)।",
+        "invalid_field": "फ़ील्ड {field} में असमर्थित सिंटैक्स या सीमा से बाहर मान हैं।"
+      },
+      "upcoming_title": "आगामी रन",
+      "upcoming_description": "आपके वर्तमान समय क्षेत्र के अनुसार अगली कुछ रनिंग का पूर्वावलोकन करें।",
+      "upcoming_placeholder": "मान्य अभिव्यक्ति दर्ज करें ताकि आगामी रन दिखाई दें।",
+      "upcoming_empty": "अगले वर्ष के भीतर कोई मेल खाने वाला समय नहीं मिला। कृपया अभिव्यक्ति समायोजित करें।",
+      "occurrence_index": "क्रम #{index}",
+      "introduction": "Cron अभिव्यक्ति विश्लेषक डेवलपर्स को Cron अनुसूचियों की जल्दी पुष्टि करने, प्रत्येक फ़ील्ड का विस्तार देखने और आगामी निष्पादन समय का अंदाज़ा लगाने में मदद करता है। यह सामान्य UNIX शैली सिंटैक्स तथा महीनों और सप्ताह के दिनों के नामों को समर्थन देता है।",
+      "features": [
+        "🧭 रीयल-टाइम वैधता जांच और स्पष्ट त्रुटि संदेश।",
+        "📅 मिनट, घंटा, दिन, महीना और सप्ताह वाले फ़ील्ड का पढ़ने योग्य पूर्वावलोकन।",
+        "⏱ आपके स्थानीय समय क्षेत्र का उपयोग करके 20 तक आगामी रन उत्पन्न करें।",
+        "🔁 लोकप्रिय अनुसूचियों के लिए उपयोगी प्रीसेट बटन।",
+        "🌐 JAN-DEC और MON-SUN नामों के साथ-साथ संख्यात्मक मानों का समर्थन।"
+      ],
+      "faq": [
+        {
+          "question": "यह उपकरण कौन सा Cron प्रारूप समर्थन करता है?",
+          "answer": "विश्लेषक पारंपरिक पाँच-फ़ील्ड UNIX Cron प्रारूप का अनुसरण करता है: मिनट, घंटा, महीने का दिन, महीना और सप्ताह का दिन। फिलहाल सेकंड या Quartz एक्सटेंशन समर्थित नहीं हैं।"
+        },
+        {
+          "question": "दिन और सप्ताह के दिन फ़ील्ड साथ में कैसे कार्य करते हैं?",
+          "answer": "जब दोनों फ़ील्ड विशिष्ट मान रखते हैं ( * या ? नहीं), तो शेड्यूल तब चलता है जब किसी एक फ़ील्ड का मान मेल खाता है। यह अधिकांश Linux Cron का व्यवहार है। आवश्यकता होने पर किसी फ़ील्ड को अनदेखा करने के लिए ? का उपयोग करें।"
+        }
+      ],
+      "meta": {
+        "title": "Cron अभिव्यक्ति विश्लेषक - ऑनलाइन Cron वैलिडेटर",
+        "description": "मुफ़्त ऑनलाइन Cron अभिव्यक्ति विश्लेषक जो सिंटैक्स की जाँच करता है और आगामी रनिंग का पूर्वावलोकन दिखाता है।",
+        "keywords": "Cron अभिव्यक्ति,Cron वैलिडेटर,Cron शेड्यूल,Cron परीक्षण,ऑटोमेशन उपकरण"
       }
     },
     "base64-file-converter": {
